# microstrain

./: .gitignore  CMakeLists.txt  README
catkin/: CMakeLists.txt  package.xml
catkin/scripts/: lcm2ros_microstrain_25_imu.py
lcmtypes/: microstrain_ins_t.lcm
src/: microstrain_comm.cpp  microstrain_pose.cpp
